# vkbinding-poc

./: CMakeLists.txt  README.md  vkbinding-config.cmake
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/basic-compute/: CMakeLists.txt  main.cpp
source/examples/basic-rendering/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
source/tests/vkbinding-test/: AllVersions_test.cpp  CMakeLists.txt
source/tools/: CMakeLists.txt
source/vkbinding/: CMakeLists.txt
source/vkbinding-aux/: CMakeLists.txt
source/vkbinding-aux/include/vkbinding-aux/: Meta.h  RingBuffer.h  RingBuffer.inl  ValidVersions.h  logging.h  types_to_string.h  types_to_string.inl
source/vkbinding-aux/source/: Meta.cpp  Meta_BitfieldsByString.cpp  Meta_BooleansByString.cpp  Meta_EnumsByString.cpp  Meta_ExtensionsByFunctionString.cpp  Meta_ExtensionsByString.cpp  Meta_FunctionStringsByExtension.cpp  Meta_FunctionStringsByVersion.cpp  Meta_Maps.h  Meta_ReqVersionsByExtension.cpp  Meta_StringsByBitfield.cpp  Meta_StringsByBoolean.cpp  Meta_StringsByEnum.cpp  Meta_StringsByExtension.cpp  Meta_getStringByBitfield.cpp  ValidVersions.cpp  ValidVersions_list.cpp  logging.cpp  logging_private.h  types_to_string.cpp  types_to_string_private.h  vkrevision.h
source/vkbinding/include/vkbinding/: AbstractFunction.h  AbstractState.h  AbstractValue.h  Binding.h  Boolean32.h  Boolean32.inl  Boolean8.h  Boolean8.inl  CallbackMask.h  CallbackMask.inl  ContextHandle.h  Function.h  Function.inl  FunctionCall.h  ProcAddress.h  SharedBitfield.h  (+9 more)
source/vkbinding/source/: AbstractFunction.cpp  AbstractState.cpp  AbstractValue.cpp  Binding.cpp  Binding_list.cpp  Binding_objects_a.cpp  Binding_objects_b.cpp  Binding_objects_c.cpp  Binding_objects_d.cpp  Binding_objects_e.cpp  Binding_objects_f.cpp  Binding_objects_g.cpp  Binding_objects_i.cpp  Binding_objects_l.cpp  Binding_objects_m.cpp  Binding_objects_q.cpp  Binding_objects_r.cpp  Binding_objects_s.cpp  Binding_objects_t.cpp  Binding_objects_u.cpp  Binding_objects_w.cpp  Binding_pch.h  FunctionCall.cpp  State.cpp  getProcAddress.cpp  vkbinding.cpp
(+61 files in other folders)
